[gd_scene load_steps=15 format=3 uid="uid://cgtxv6lx10wbk"]

[ext_resource type="Script" path="res://Bathroom.gd" id="1_efhsw"]
[ext_resource type="Texture2D" uid="uid://cj46ucfm5a6mj" path="res://art/Scenes/Bathroom/mirror.png" id="3_23xns"]
[ext_resource type="Texture2D" uid="uid://bt202ldhis26a" path="res://art/Scenes/Bathroom/1a - Broken-Bathroom (also used for 2f broom).jpg" id="3_kapfs"]
[ext_resource type="Script" path="res://Area2D.gd" id="4_auqva"]
[ext_resource type="Texture2D" uid="uid://byvhfkrctlmow" path="res://art/Scenes/Bathroom/openMirror.jpeg" id="5_ubr8t"]
[ext_resource type="Texture2D" uid="uid://ca02u8t1kcbm8" path="res://art/Scenes/Bathroom/sink.png" id="6_jh0gu"]
[ext_resource type="Script" path="res://TextBox.gd" id="7_sx7f0"]
[ext_resource type="Texture2D" uid="uid://c588y54orjsp8" path="res://art/Scenes/Bathroom/pills.png" id="8_8otk2"]
[ext_resource type="Texture2D" uid="uid://cjjhj4jahpyuv" path="res://art/Scenes/Bathroom/screwdriver.png" id="9_4lbrm"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_43ulf"]
bg_color = Color(0, 0, 0, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_cuh7v"]
bg_color = Color(0.188235, 0.188235, 0.188235, 1)

[sub_resource type="Animation" id="Animation_icy1a"]
resource_name = "show"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Label:visible_ratio")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.7),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 1.0]
}

[sub_resource type="Animation" id="Animation_wktbs"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Label:visible_ratio")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_t7xu0"]
_data = {
"RESET": SubResource("Animation_wktbs"),
"show": SubResource("Animation_icy1a")
}

[node name="Bathroom" type="Node2D"]
position = Vector2(657, 393)
script = ExtResource("1_efhsw")

[node name="1a-Broken-bathroom(alsoUsedFor2fBroom)" type="Sprite2D" parent="."]
position = Vector2(-91, -73)
scale = Vector2(0.584259, 0.584259)
texture = ExtResource("3_kapfs")

[node name="Mirror" type="Sprite2D" parent="."]
z_index = 1
position = Vector2(-125, -168)
scale = Vector2(0.581785, 0.581785)
texture = ExtResource("3_23xns")

[node name="Area2D" type="Area2D" parent="Mirror"]
script = ExtResource("4_auqva")

[node name="ClosedMirrorShape2D" type="CollisionPolygon2D" parent="Mirror/Area2D"]
position = Vector2(1.71887, 8.59424)
polygon = PackedVector2Array(-126, -129, -129, 118, -97, 152, -50, 174, -23, 177, 25, 179, 48, 176, 81, 163, 114, 141, 131, 120, 129, -128, 100, -152, 57, -172, 22, -182, -30, -180, -67, -167, -102, -147)

[node name="OpenMirror" type="Sprite2D" parent="."]
position = Vector2(-89.6745, -70.3706)
scale = Vector2(0.584499, 0.584499)
texture = ExtResource("5_ubr8t")

[node name="Area2D" type="Area2D" parent="OpenMirror"]

[node name="OpenMirrorShape2D" type="CollisionPolygon2D" parent="OpenMirror/Area2D"]
polygon = PackedVector2Array(-395.767, -291.924, -394.056, 525.87, -354.706, 529.292, -356.417, -293.635)

[node name="Sink" type="Sprite2D" parent="."]
position = Vector2(-126, 62)
scale = Vector2(0.580675, 0.580675)
texture = ExtResource("6_jh0gu")

[node name="Area2D" type="Area2D" parent="Sink"]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Sink/Area2D"]
polygon = PackedVector2Array(-168.769, -161.881, -153.27, -108.495, -120.549, -84.3846, -55.1082, -56.8304, -41.3311, -3.44427, -39.609, 43.0533, -46.4976, 91.2731, -56.8303, 146.381, -51.6639, 158.436, -39.609, 156.714, -5.16632, 168.769, 51.6642, 156.714, 61.9969, 144.659, 46.4977, 89.551, 39.6092, 53.3862, 43.0535, 3.44427, 56.8306, -56.8304, 101.606, -72.3297, 136.049, -94.7175, 167.047, -129.16, 170.491, -160.159, 154.992, -165.325, 89.5511, -172.214, 41.3314, -172.214, -58.5525, -172.214, -115.383, -170.491)

[node name="Pills" type="Sprite2D" parent="."]
position = Vector2(-249, 26)
scale = Vector2(0.618159, 0.64373)
texture = ExtResource("8_8otk2")

[node name="Area2D" type="Area2D" parent="Pills"]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Pills/Area2D"]
polygon = PackedVector2Array(-25.8834, -59.031, -29.1188, 57.4775, 29.1186, 59.0309, 32.354, -55.9241)

[node name="Screwdriver" type="Sprite2D" parent="."]
position = Vector2(-114, 178)
scale = Vector2(0.671052, 0.671052)
texture = ExtResource("9_4lbrm")

[node name="Area2D" type="Area2D" parent="Screwdriver"]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Screwdriver/Area2D"]
polygon = PackedVector2Array(-96.8628, -14.902, -99.8432, 16.3922, 1.49023, 23.8432, 105.804, 25.3334, 107.294, -22.353, 14.902, -23.8431)

[node name="TextBox" type="CanvasLayer" parent="."]
script = ExtResource("7_sx7f0")

[node name="TextboxContainer" type="MarginContainer" parent="TextBox"]
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -148.0
offset_right = -25.0
offset_bottom = -15.0
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/margin_left = 16
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 16

[node name="Panel" type="Panel" parent="TextBox/TextboxContainer"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_43ulf")

[node name="MarginContainer" type="MarginContainer" parent="TextBox/TextboxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 16

[node name="Panel" type="Panel" parent="TextBox/TextboxContainer/MarginContainer"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_cuh7v")

[node name="HBoxContainer" type="HBoxContainer" parent="TextBox/TextboxContainer/MarginContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="TextBox/TextboxContainer/MarginContainer/HBoxContainer"]
layout_mode = 2
text = "This sink doesn't  do anything"
visible_characters = 0
visible_ratio = 0.0

[node name="AnimationPlayer" type="AnimationPlayer" parent="TextBox/TextboxContainer/MarginContainer/HBoxContainer"]
libraries = {
"": SubResource("AnimationLibrary_t7xu0")
}

[connection signal="input_event" from="Mirror/Area2D" to="." method="_on_area_open_mirror_input_event"]
[connection signal="mouse_entered" from="Mirror/Area2D" to="." method="change_cursor_hand"]
[connection signal="mouse_exited" from="Mirror/Area2D" to="." method="change_cursor_back"]
[connection signal="input_event" from="OpenMirror/Area2D" to="." method="_on_area_close_mirror_input_event"]
[connection signal="mouse_entered" from="OpenMirror/Area2D" to="." method="change_cursor_hand"]
[connection signal="mouse_exited" from="OpenMirror/Area2D" to="." method="change_cursor_back"]
[connection signal="input_event" from="Pills/Area2D" to="." method="_on_area_pills_input_event"]
[connection signal="input_event" from="Screwdriver/Area2D" to="." method="_on_area_screw_driver_input_event"]
